# bug-stdpar-sep-compile

./: Inner.C  Inner.h  README  main.C
.cmake-test/: CMakeLists.txt
